Finalize report API with weekly, monthly and quarterly reports
